# rustyone

./: Cargo.toml  README.md  run.sh
notes/: basics.md
src/: main.rs
testfiles/: 100rows.csv
